added a select list for mods

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title></title>
 
 	<link rel="stylesheet" href="./bower_components/angular-material/angular-material.css" />
+	<link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <h1>Tree of Savior Mod Manager!</h1>
-
 	<ng-view></ng-view>
 
     We are using node <script>document.write(process.versions.node)</script>,
