--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-ng-app="app">
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Tree of Savior Mod Manager</title>
 
 	<link rel="stylesheet" href="./bower_components/angular-material/angular-material.css" />
 	<link rel="stylesheet" href="./css/main.css" />
