--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 	<script src="./bower_components/angular/angular.js"></script>
 	<script src="./bower_components/angular-route/angular-route.js"></script>
+	<script src="./bower_components/angular-resource/angular-resource.js"></script>
 	<script src="./bower_components/angular-animate/angular-animate.js"></script>
 	<script src="./bower_components/angular-aria/angular-aria.js"></script>
 	<script src="./bower_components/angular-material/angular-material.js"></script>
 
 	<script src="./scripts/app.js"></script>
 	<script src="./scripts/main/mainController.js"></script>
+	<script src="./scripts/main/addonsFactory.js"></script>
   </body>
 </html>
