--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
 	<link rel="stylesheet" href="./bower_components/angular-material/angular-material.css" />
 	<link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body>
+  <body ng-cloak>
 	<ng-view></ng-view>
-
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
 
 	<script src="./bower_components/angular/angular.js"></script>
 	<script src="./bower_components/angular-route/angular-route.js"></script>
