--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
 	<script src="./scripts/app.js"></script>
 	<script src="./scripts/main/mainController.js"></script>
-	<script src="./scripts/main/addonsFactory.js"></script>
+	<script src="./scripts/main/mods.factory.js"></script>
   </body>
 </html>
