--- a/scripts/install/install.html
+++ b/scripts/install/install.html
@@ -13,7 +13,7 @@
 							<div class="md-tile-right inset" hide-sm>
 								<md-button class="md-raised md-primary" data-ng-click="installController.installMod(mod);">Install</md-button>
 							</div>
-							<md-progress-linear md-mode="determinate" value="{{mod.installProgress}}"></md-progress-linear>
+							<md-progress-linear md-mode="determinate" value="{{mod.installProgress}}" ng-show="mod.isDownloading"></md-progress-linear>
 						</md-item-content>
 					</md-item>
 					<md-divider></md-divider>
