disable install button when download is in progress

--- a/scripts/install/install.html
+++ b/scripts/install/install.html
@@ -11,7 +11,7 @@
 								<p>{{ mod.short }}</p>
 							</div>
 							<div class="md-tile-right inset" hide-sm>
-								<md-button class="md-raised md-primary" data-ng-click="installController.installMod(mod);">Install</md-button>
+								<md-button class="md-raised md-primary" data-ng-click="installController.installMod(mod);" ng-disabled="mod.isDownloading">Install</md-button>
 							</div>
 							<md-progress-linear md-mode="determinate" value="{{mod.installProgress}}" ng-show="mod.isDownloading"></md-progress-linear>
 						</md-item-content>
