--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en" data-ng-app="app">
 	<head>
 		<meta charset="UTF-8">
-		<title>Tree of Savior Mod Manager</title>
+		<title>Tree of Savior Addon Manager</title>
 
-		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.css" />
+		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body ng-cloak>
 
-		<a ui-sref="settings">Settings</a>
-		<a ui-sref="install">Install</a>
-
 		<div ui-view></div>
 
-		<script src="./bower_components/angular/angular.js"></script>
+		<script src="./bower_components/angular/angular.min.js"></script>
+		<script src="./bower_components/angular-animate/angular-animate.min.js"></script>
+		<script src="./bower_components/angular-aria/angular-aria.min.js"></script>
+		<script src="./bower_components/angular-messages/angular-messages.min.js"></script>
+		<script src="./bower_components/angular-material/angular-material.min.js"></script>
+
 		<script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script src="./bower_components/angular-resource/angular-resource.js"></script>
-		<script src="./bower_components/angular-animate/angular-animate.js"></script>
-		<script src="./bower_components/angular-aria/angular-aria.js"></script>
-		<script src="./bower_components/angular-material/angular-material.js"></script>
 
 		<script src="./scripts/app.js"></script>
+		<script src="./scripts/main/main.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
 		<script src="./scripts/install/install.controller.js"></script>
 		<script src="./scripts/mods/mods.factory.js"></script>
