--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-	<body ng-cloak>
+	<body ng-cloak ng-controller="TabController">
 
-		<div ui-view></div>
+		<md-tabs md-stretch-tabs md-selected="vm.selectedIndex">
+			<md-tab label="Settings"></md-tab>
+			<md-tab label="Featured"></md-tab>
+			<md-tab label="Browse"></md-tab>
+			<md-tab label="Installed"></md-tab>
+		</md-tabs>
+
+		<div id="content" ui-view flex></div>
 
 		<script src="./bower_components/angular/angular.min.js"></script>
 		<script src="./bower_components/angular-animate/angular-animate.min.js"></script>
@@ -21,9 +28,11 @@
 		<script src="./bower_components/angular-resource/angular-resource.js"></script>
 
 		<script src="./scripts/app.js"></script>
-		<script src="./scripts/main/main.controller.js"></script>
+		<script src="./scripts/tab/tab.controller.js"></script>
+		<script src="./scripts/featured/featured.controller.js"></script>
+		<script src="./scripts/browse/browse.controller.js"></script>
+		<script src="./scripts/installed/installed.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
-		<script src="./scripts/install/install.controller.js"></script>
 		<script src="./scripts/mods/mods.factory.js"></script>
 	</body>
 </html>
