--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 	</head>
 	<body ng-cloak ng-controller="TabController">
 
-		<md-tabs md-stretch-tabs md-selected="vm.selectedIndex">
-			<md-tab label="Settings"></md-tab>
-			<md-tab label="Featured"></md-tab>
-			<md-tab label="Browse"></md-tab>
-			<md-tab label="Installed"></md-tab>
-		</md-tabs>
+		<div id="wrapper">
+			<div id="body">
+				<div class="content">
+					<md-tabs md-stretch-tabs md-selected="vm.selectedIndex">
+						<md-tab label="Settings"></md-tab>
+						<md-tab label="Featured"></md-tab>
+						<md-tab label="Browse"></md-tab>
+						<md-tab label="Installed"></md-tab>
+					</md-tabs>
 
-		<div id="content" ui-view flex></div>
+					<div id="content" ui-view flex></div>
+				</div>
+			</div>
+			<div id="footer" md-whiteframe="3">
+				<md-button href="steam://rungameid/372000" md-whiteframe="1">Launch Tree of Savior</md-button>
+			</div>
+		</div>
+
 
 		<script src="./bower_components/angular/angular.min.js"></script>
 		<script src="./bower_components/angular-animate/angular-animate.min.js"></script>
