--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 		<script src="./scripts/browse/browse.controller.js"></script>
 		<script src="./scripts/installed/installed.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
-		<script src="./scripts/mods/mods.factory.js"></script>
+		<script src="./scripts/services/installer.service.js"></script>
 	</body>
 </html>
