created settings service to store settings and keep track of installed addons

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 		<script src="./scripts/installed/installed.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
 		<script src="./scripts/services/installer.service.js"></script>
+		<script src="./scripts/services/settings.service.js"></script>
 	</body>
 </html>
