added fail state for addons that fail to download and error message.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 			<div id="footer" md-whiteframe="3">
-				<md-button href="steam://rungameid/372000" md-whiteframe="1">Launch Tree of Savior</md-button>
+				<md-button href="steam://rungameid/372000" class="md-raised">Launch Tree of Savior</md-button>
 			</div>
 		</div>
 
