a crappy implementation if saving/loading directory

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-	<body ng-cloak ng-controller="TabController">
+	<body ng-cloak ng-controller="TabController as vm">
 
 		<div id="wrapper">
 			<div id="body">
 				<div class="content">
 					<md-tabs md-stretch-tabs md-selected="vm.selectedIndex">
 						<md-tab label="Settings"></md-tab>
-						<md-tab label="Featured"></md-tab>
-						<md-tab label="Browse"></md-tab>
-						<md-tab label="Installed"></md-tab>
+						<md-tab label="Featured" ng-disabled="!vm.isValidDirectory();"></md-tab>
+						<md-tab label="Browse" ng-disabled="!vm.isValidDirectory();"></md-tab>
+						<md-tab label="Installed" ng-disabled="!vm.isValidDirectory();"></md-tab>
 					</md-tabs>
 
 					<div id="content" ui-view flex></div>
