refactored the browse view into a directive so it can be reused.

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
 		<script src="./scripts/settings/settings.controller.js"></script>
 		<script src="./scripts/services/installer.service.js"></script>
 		<script src="./scripts/services/settings.service.js"></script>
+		<script src="./scripts/browse/addon.directive.js"></script>
 	</body>
 </html>
