--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<script src="./scripts/browse/browse.controller.js"></script>
 		<script src="./scripts/installed/installed.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
+		<script src="./scripts/services/addonretriever.service.js"></script>
 		<script src="./scripts/services/installer.service.js"></script>
 		<script src="./scripts/services/settings.service.js"></script>
 		<script src="./scripts/browse/addon.directive.js"></script>
