retrieve readme.md for addon and display it in markdown when clicking details.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<script src="./scripts/installed/installed.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
 		<script src="./scripts/services/addonretriever.service.js"></script>
+		<script src="./scripts/services/readmeretriever.service.js"></script>
 		<script src="./scripts/services/installer.service.js"></script>
 		<script src="./scripts/services/settings.service.js"></script>
 		<script src="./scripts/browse/addon.directive.js"></script>
