--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 		
 	</head>
 	<body style="font-family:'メイリオ',Meiryo UI;" ng-cloak ng-controller="TabController as vm">
-
 		<div id="wrapper">
 			<div id="body">
 				<div class="content">
-					<md-tabs md-stretch-tabs md-selected="vm.selectedIndex">
+					<md-tabs data-ng-show="vm.showTab()" md-stretch-tabs md-border-bottom  md-selected="vm.selectedIndex">
 						<md-tab label="Settings"></md-tab>
 						<md-tab label="IToS" ng-disabled="!vm.isValidDirectory();"></md-tab>
 						<md-tab label="JToS" ng-disabled="!vm.isValidDirectory();"></md-tab>
 					</md-tabs>
+					<div id="top" ></div>
 
 					<div id="content" ui-view flex></div>
 				</div>
 			</div>
 			<div id="footer" md-whiteframe="3">
+				<md-button  class="md-raised" style="float:left"data-ng-click="vm.jumpTo()">Go TOP</md-button>
 				<md-button data-ng-click="vm.launchGame();" class="md-raised">Open ToS JP Site</md-button>
 			</div>
 		</div>
