アドオンマネージャーの国際化 (Support i18n) (#7)
* angular-translateを導入する

`bower install --production`のみを実行する
依存関係解決が割と大変なので、Angularを1系の最新まで上げたい

* angular-translateの初期化処理と切り替え処理の仮実装

* angular-translateでの言語切替処理の仮実装

* アドオン欄のi18n化

* 不要なファイルを削除

Featureはすで使用されていないため

* index.htmlのi18n化

* 検索欄のi18n化

* すでに使用されていないルーティングを削除

* 設定ページのi18n化

* titleはi18n化しない

* 翻訳済みのメッセージを入れる

* AppVeyorでコミットごとに自動パッケージングするようにする

* 開発者ツールを非表示にし、各種コードを動くようにする

* パッケージングする時はasar化する

* appveyor.ymlを分かりやすいように書き換える

* packageスクリプトをより詳細にする

* 英語訳を仮に入れる

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 		<link rel="stylesheet" href="./css/github-markdown.css" />
-		
+
 	</head>
 	<body style="font-family:'メイリオ',Meiryo UI;" ng-cloak ng-controller="TabController as vm">
 		<div id="wrapper">
@@ -15,17 +15,21 @@
 				<div id="top" ></div>
 				<div class="content">
 					<md-tabs data-ng-show="vm.showTab()" md-stretch-tabs md-border-bottom  md-selected="vm.selectedIndex">
-						<md-tab label="設定"></md-tab>
-						<md-tab label="IToS" ng-disabled="!vm.isValidDirectory();"></md-tab>
-						<md-tab label="JToS" ng-disabled="!vm.isValidDirectory();"></md-tab>
-					</md-tabs>		
+						<md-tab label="{{ 'TAB.SETTINGS' | translate }}"></md-tab>
+						<md-tab label="{{ 'TAB.ITOS' | translate }}" ng-disabled="!vm.isValidDirectory();"></md-tab>
+						<md-tab label="{{ 'TAB.JTOS' | translate }}" ng-disabled="!vm.isValidDirectory();"></md-tab>
+					</md-tabs>
 					<div id="content" ui-view flex></div>
 				</div>
 			</div>
-			<div id="footer" md-whiteframe="3">
-				<md-button  class="md-raised" style="float:left"data-ng-click="reloadRoute()">ページの更新</md-button>
-				<md-button  class="md-raised" style="float:left"data-ng-click="vm.jumpTo()">上に戻る</md-button>
-				<md-button data-ng-click="vm.launchGame();" class="md-raised">公式サイトへ</md-button>
+			<div id="footer" md-whiteframe="4">
+				<md-select class="md-menu" style="margin: 0;" data-ng-model="vm.selectedLanguage" data-ng-change="vm.changeLang(vm.selectedLanguage)" aria-label="Language">
+					<md-option value="en">EN</md-option>
+					<md-option value="ja">JA</md-option>
+				</md-select>
+				<md-button	class="md-raised" style="float:left"data-ng-click="reloadRoute()">{{ 'FOOTER.RELOAD' | translate }}</md-button>
+				<md-button	class="md-raised" style="float:left"data-ng-click="vm.jumpTo()">{{ 'FOOTER.SCROLL_TO_TOP' | translate }}</md-button>
+				<md-button data-ng-click="vm.launchGame();" class="md-raised">{{ 'FOOTER.OPEN_OFFICIAL_SITE' | translate }}</md-button>
 			</div>
 		</div>
 
@@ -34,13 +38,18 @@
 		<script src="./bower_components/angular-aria/angular-aria.min.js"></script>
 		<script src="./bower_components/angular-messages/angular-messages.min.js"></script>
 		<script src="./bower_components/angular-material/angular-material.min.js"></script>
+		<script src="./bower_components/angular-cookies/angular-cookies.min.js"></script>
+		<script src="./bower_components/angular-translate/angular-translate.min.js"></script>
+		<script src="./bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
+		<script src="./bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
+		<script src="./bower_components/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
+		<script src="./bower_components/angular-translate-handler-log/angular-translate-handler-log.min.js"></script>
 
 		<script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script src="./bower_components/angular-resource/angular-resource.js"></script>
 
 		<script src="./scripts/app.js"></script>
 		<script src="./scripts/tab/tab.controller.js"></script>
-		<script src="./scripts/featured/featured.controller.js"></script>
 		<script src="./scripts/browse/browse.controller.js"></script>
 		<script src="./scripts/browse/browseJP.controller.js"></script>
 		<script src="./scripts/installed/installed.controller.js"></script>
@@ -53,6 +62,6 @@
 		<script src="./scripts/browse/addon.directive.js"></script>
 		<script src="./scripts/services/sharedscope.service.js"></script>
 		<script src="./scripts/marked.js"></script>
-		
+
 	</body>
 </html>
