Add LATAM languages support (#10)
* Add pt-br langauge support

* Add spanish language support

* Translate alert texts

- Add multi-language support for alert strings on controller.
- Add localized TOS site.
- Refactor and lint some code.
- Extend alert messages from JTOS search to ITOS search.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 				<md-select class="md-menu" style="margin: 0;" data-ng-model="vm.selectedLanguage" data-ng-change="vm.changeLang(vm.selectedLanguage)" aria-label="Language">
 					<md-option value="en">EN</md-option>
 					<md-option value="ja">JA</md-option>
+					<md-option value="pt-BR">PT-BR</md-option>
+					<md-option value="es">ES</md-option>
 				</md-select>
 				<md-button	class="md-raised" style="float:left"data-ng-click="reloadRoute()">{{ 'FOOTER.RELOAD' | translate }}</md-button>
 				<md-button	class="md-raised" style="float:left"data-ng-click="vm.jumpTo()">{{ 'FOOTER.SCROLL_TO_TOP' | translate }}</md-button>
