changable to Korean

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<md-option value="ja">JA</md-option>
 					<md-option value="pt-BR">PT-BR</md-option>
 					<md-option value="es">ES</md-option>
+					<md-option value="ko">KO</md-option>
 				</md-select>
 				<md-button	class="md-raised" style="float:left"data-ng-click="reloadRoute()">{{ 'FOOTER.RELOAD' | translate }}</md-button>
 				<md-button	class="md-raised" style="float:left"data-ng-click="vm.jumpTo()">{{ 'FOOTER.SCROLL_TO_TOP' | translate }}</md-button>
