--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Tree of Savior Addon Manager</title>
 
-		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css" />
+		<link rel="stylesheet" href="./bower_components/angular-material/angular-material.css" />
 		<link rel="stylesheet" href="./css/main.css" />
 		<link rel="stylesheet" href="./css/github-markdown.css" />
 
@@ -57,6 +57,7 @@
 		<script src="./scripts/tab/tab.controller.js"></script>
 		<script src="./scripts/browse/browse.controller.js"></script>
 		<script src="./scripts/browse/browseJP.controller.js"></script>
+		<script src="./scripts/browse/addonbig.controller.js"></script>
 		<script src="./scripts/installed/installed.controller.js"></script>
 		<script src="./scripts/settings/settings.controller.js"></script>
 		<script src="./scripts/services/addonretriever.service.js"></script>
