--- a/index.html
+++ b/index.html
@@ -23,18 +23,33 @@
 					<div id="content" ui-view flex></div>
 				</div>
 			</div>
-			<div id="footer" md-whiteframe="4">
-				<md-card md-whiteframe="5">
-				<md-checkbox  ng-model="vm.doesTransDesc"  data-ng-change="vm.changeTranslateDescription()" aria-label="Does translate Description">{{ 'FOOTER.TRANSLATE_DESCRIPTION' | translate }}</md-checkbox>
-				</md-card>
-			
-				<md-select class="md-menu" style="margin: 0;" data-ng-model="vm.selectedLanguage" data-ng-change="vm.changeLang(vm.selectedLanguage)" aria-label="Language">
-					<md-option  data-ng-repeat="lang in vm.locales" value="{{lang}}">{{lang | uppercase}}</md-option>
-				</md-select>
-				<md-button	class="md-raised" style="float:left" data-ng-click="reloadRoute()">{{ 'FOOTER.RELOAD' | translate }}</md-button>
-				<md-button	class="md-raised" style="float:left" data-ng-click="vm.jumpTo()">{{ 'FOOTER.SCROLL_TO_TOP' | translate }}</md-button>
-				<md-button data-ng-click="vm.launchGame();" class="md-raised">{{ 'FOOTER.OPEN_OFFICIAL_SITE' | translate }}</md-button>
-				
+			<div id="footer" md-whiteframe="4" style="display:inline-block;">
+				<div style="float:left;width:32px;">
+					<md-card md-whiteframe="5" style="margin:0px;margin-left:10px;width:64px">
+						<md-button class="md-icon-button" data-ng-click="vm.openDiscord();" aria-label="discord">
+							<md-tooltip md-direction="top">
+								Discord
+							</md-tooltip>
+							<img src="./img/discord.png" style="width:32px;height:32px;float:left;margin: 0;" alt="discord">
+						</md-button>
+					</md-card>
+				</div>
+
+				<div style="float:left;">
+					<md-card md-whiteframe="5" style="margin:0px;margin-left:200px;">
+						<md-checkbox style="float:left;margin:10px;" ng-model="vm.doesTransDesc"  data-ng-change="vm.changeTranslateDescription()" aria-label="Does translate Description">{{ 'FOOTER.TRANSLATE_DESCRIPTION' | translate }}</md-checkbox>
+					</md-card>
+				</div>
+				<div style="float:right;width:100px;">
+					<md-select class="md-menu" style="margin: 0;width:100px;" data-ng-model="vm.selectedLanguage" data-ng-change="vm.changeLang(vm.selectedLanguage)" aria-label="Language">
+						<md-option  style="margin: 0;width:100px;" data-ng-repeat="lang in vm.locales" value="{{lang}}">{{lang | uppercase}}</md-option>
+					</md-select>
+				</div>
+
+					<md-button	class="md-raised" style="float:right;" data-ng-click="reloadRoute()">{{ 'FOOTER.RELOAD' | translate }}</md-button>
+					<md-button	class="md-raised" style="float:right;" data-ng-click="vm.jumpTo()">{{ 'FOOTER.SCROLL_TO_TOP' | translate }}</md-button>
+					<md-button data-ng-click="vm.launchGame();" style="float:right;" class="md-raised">{{ 'FOOTER.OPEN_OFFICIAL_SITE' | translate }}</md-button>
+
 			</div>
 		</div>
 
