--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="./css/github-markdown.css" />
 
 	</head>
-	<body style="font-family:'メイリオ',Meiryo UI;" ng-cloak ng-controller="TabController as vm">
+	<body style="font-family:'メイリオ',Meiryo UI;overflow:hidden;" ng-cloak ng-controller="TabController as vm">
 		<div id="wrapper">
 			<div id="body">
 				<div id="top" ></div>
