--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<div id="body">
 				<div id="top" ></div>
 				<div class="content">
-					<md-tabs data-ng-show="vm.showTab()" md-stretch-tabs md-border-bottom  md-selected="vm.selectedIndex">
+					<md-tabs  md-stretch-tabs md-border-bottom  md-selected="vm.selectedIndex">
+					<!--<md-tabs data-ng-show="vm.showTab()" md-stretch-tabs md-border-bottom  md-selected="vm.selectedIndex">-->
 						<md-tab label="{{ 'TAB.SETTINGS' | translate }}"></md-tab>
 						<md-tab label="{{ 'TAB.ITOS' | translate }}" ng-disabled="!vm.isValidDirectory();"></md-tab>
 						<md-tab label="{{ 'TAB.JTOS' | translate }}" ng-disabled="!vm.isValidDirectory();"></md-tab>
@@ -81,6 +82,7 @@
 		<script src="./scripts/services/installer.service.js"></script>
 		<script src="./scripts/services/settings.service.js"></script>
 		<script src="./scripts/browse/addon.directive.js"></script>
+		<script src="./scripts/browse/addonDetail.directive.js"></script>
 		<script src="./scripts/services/sharedscope.service.js"></script>
 		<script src="./scripts/marked.js"></script>
 
